Media queries - 500px -- fix Header, and wrap search bar

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: center;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%; } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -456,6 +460,11 @@ body::-webkit-scrollbar {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      height: 11rem;
+      align-content: space-around; } }
 
 .content {
   display: flex; }
